Logging for tests.